[package]
name = "spin-analytics"
version = "0.1.0"
edition = "2021"
description = "spin app analytics"

[lib]
doctest = false

[dependencies]
derive_builder = "0.12.0"
chrono = "0.4"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v0.10.0" }
spin-analytics-macro = { path = "macro" }
anyhow = "1"
serde_json = "1.0.82"